<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.insee.pogues</groupId>
	<artifactId>pogues-model</artifactId>
	<version>1.12.2</version>
	<packaging>jar</packaging>

	<name>Pogues Model</name>
	<description>Classes and converters for the Pogues model</description>
	<url>https://inseefr.github.io/Pogues-Model/</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Nicolas Senave</name>
			<organization>Insee</organization>
			<organizationUrl>http://www.insee.fr</organizationUrl>
		</developer>
		<developer>
			<name>François Bulot</name>
			<organization>Insee</organization>
			<organizationUrl>http://www.insee.fr</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/InseeFr/Pogues-Model.git</connection>
		<developerConnection>scm:git:ssh://github.com:InseeFr/Pogues-Model.git</developerConnection>
		<url>http://github.com/InseeFr/Pogues-Model.git/tree/master</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>central</id>
			<url>https://central.sonatype.com/api/publish/maven</url>
		</repository>
	</distributionManagement>

	<properties>
		<!-- Java version -->
		<maven.compiler.release>21</maven.compiler.release>
		<!-- Project encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Dependency versions -->
		<jaxb-api.version>2.3.1</jaxb-api.version>
		<eclipse.version>2.6.0</eclipse.version>
		<commons-io.version>2.21.0</commons-io.version>
		<slf4j.version>2.0.17</slf4j.version>
		<junit.version>5.14.1</junit.version>
		<jsonassert.version>1.5.3</jsonassert.version>
		<xmlunit.version>2.11.0</xmlunit.version>
		<log4j-slf4j2.version>2.25.2</log4j-slf4j2.version>
		<!-- Build plugin versions -->
		<surefire.plugin.version>2.22.2</surefire.plugin.version>
		<jaxb2.plugin.version>2.5.0</jaxb2.plugin.version>
		<resources.plugin.version>3.3.1</resources.plugin.version>
		<build-helper.plugin.version>1.12</build-helper.plugin.version>
	</properties>

	<dependencies>
		<!-- Main dependencies -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb-api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.moxy</artifactId>
			<version>${eclipse.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>${eclipse.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<!-- Logging API -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			<version>${jsonassert.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-assertj3</artifactId>
			<version>${xmlunit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>${log4j-slf4j2.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- Build plugins -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${maven.compiler.release}</source>
						<target>${maven.compiler.release}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<argLine>-Djavax.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>${jaxb2.plugin.version}</version>
				<executions>
					<execution>
						<id>xjc</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>xjc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<packageName>fr.insee.pogues.model</packageName>
					<encoding>${project.build.sourceEncoding}</encoding>
					<sources>
						<source>src/main/resources/xsd/Questionnaire.xsd</source>
					</sources>
					<arguments>
						<argument>-b</argument>
						<argument>src/main/resources/jaxb/bindings.xjb</argument>
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${resources.plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/classes/fr/insee/pogues/model</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources/jaxb</directory>
									<includes>
										<include>jaxb.properties</include>
									</includes>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>${build-helper.plugin.version}</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>compile</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.build.directory}/generated-sources/jaxb</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- Deploy plugins -->
	<profiles>
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.9.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
